feat(revision history): #59 read advisory versions, improve versioning